# openhuman

./: .gitignore  AI-Employee-Engine-Plan.md  Dockerfile  README.md  docker-compose.yml  dummy_company_policies.md  package.json  railway.toml  railway.toml.web  tsconfig.json  turbo.json
apps/api/: .env.example  .vercelignore  Dockerfile  Dockerfile.railway  openapi.json  package.json  pyproject.toml  railway.toml  requirements.txt  slack_manifest.json  test_out.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0de87a911e11_add_slack_app_slots_and_employee_slack_.py  10731d49ed2d_merge_split_heads.py  3a9013c04672_add_onboarding_completed_to_users.py  3b3f34b263c7_initial_schema.py  4c7d2a8e1f3b_add_mcp_connections_table.py  522a1ad33217_add_employee_type_column_and_unique_.py  5b532aa92a7b_merge_two_heads.py  60e6617d105f_add_sales_to_employee_type_check.py  8c3855eb11a5_replace_password_hash_with_clerk_id.py  a1147141b092_replace_slot_based_bots_with_fixed_.py  a1b2c3d4e5f6_add_agent_jobs_table.py  b1c2d3e4f5a6_add_activity_events.py  b8f8e6df9c21_add_server_url_to_mcp_connections.py  ba5c9e80f00a_merge_agent_jobs_and_slack_app_slots_.py  c1e8a8dc94fe_add_password_hash_nullable_clerk_id.py  db72d5ea9060_add_org_description_and_what_it_does.py  e7f8a9b0c1d2_add_escalation_policy_column_to_employees.py  ef7cebf449fe_merge_jwt_auth_and_onboarding.py  f442efd78544_merge_two_heads.py  f6e28368daa7_add_document_storage_backend.py  f7a1b2c3d4e5_add_website_url_to_organizations.py
apps/api/api/: index.py
apps/api/app/: main.py
apps/api/app/activity/: context.py  models.py  router.py  schemas.py  service.py
apps/api/app/agent/: __init__.py  build.py  checkpointer.py  router.py  schemas.py  state.py
apps/api/app/auth/: models.py  router.py  schemas.py  service.py
apps/api/app/channel_assignments/: models.py  router.py  schemas.py
apps/api/app/core/: cognee.py  config.py  database.py  dependencies.py  security.py
apps/api/app/documents/: models.py  router.py  schemas.py  service.py  utils.py
apps/api/app/employees/: models.py  router.py  schemas.py  service.py  templates.py
apps/api/app/gateway/: __init__.py  discord_bot.py  fixed_bots.py  fixed_bots_router.py  manager.py  models.py  router.py  schemas.py  slack_app_provisioning.py  slack_bot.py  slack_oauth.py
apps/api/app/health/: router.py
apps/api/app/mcp/: __init__.py  oauth.py  router.py  schemas.py
apps/api/app/memory/: __init__.py  router.py  schemas.py  service.py
apps/api/app/organizations/: models.py  router.py  schemas.py  service.py
apps/api/app/routers/: health.py
apps/api/app/storage/: __init__.py  base.py  local.py  s3.py
apps/api/cognee_data/logs/: .fuse_hidden0003f06f00000005  .fuse_hidden0005a3d200000025  .fuse_hidden0007b1dc0000005c
apps/api/evals/: eval_humanization.py
apps/api/scripts/: backfill_cognee_employees.py  configure_slack_slot.py  diagnose_employee.py  export_openapi.py  generate_slack_creation_links.py  provision_slack_slots.py  test_phase2.py
apps/api/test/: batch_test.py  cli.py  fixtures.py  mcp_helpers.py  streamlit_app.py  test_integration.py  test_mcp_servers.py
apps/api/tests/: test_agent.py  test_auth_api.py  test_documents.py  test_gateway.py  test_organizations_service.py  test_slack_bot_threads.py  test_slack_file_uploads.py  test_slack_oauth.py  test_tools_and_memory.py
(+157 files in other folders)
