[project]
name = "openhuman-api"
version = "0.1.0"
description = "OpenHuman API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.2.0",
    "langchain-openai",
    "duckduckgo-search",
    "psycopg[binary,pool]>=3.2.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "boto3>=1.35.0",
    "cognee>=1.2,<2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.19.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
